<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="@color/photo_placeholder"
        >
        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/user_icon_symbol_vector"
            android:elevation="4dp"
            android:contentDescription="@string/user_name"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_below="@id/user_profile_photo"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:id="@+id/etRFN"
                    android:background="@drawable/stroke"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:drawableTint="@color/colorPrimary"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@drawable/stroke"
                    android:padding="8dp"
                    android:id="@+id/etREmail"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorPrimary" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:id="@+id/etRUsername"
                    android:background="@drawable/stroke"
                    android:padding="8dp"
                    android:hint="@string/user_name"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:id="@+id/etRPassword"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:background="@drawable/stroke"
                    android:drawableStart="@drawable/ic_fingerprint_black_24dp"
                    android:drawableLeft="@drawable/ic_fingerprint_black_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="8dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_shape"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:padding="8dp">
                </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_question"
                        android:id="@+id/tvAdultNum"
                        android:layout_marginTop="10dp"
                        android:padding="8dp"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/array_question"
                        android:layout_marginTop="10dp"
                        android:padding="8dp"
                        android:background="@color/photo_placeholder"
                        />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:id="@+id/etRAnswer"
                    android:hint="@string/reminder_answer"
                    android:padding="8dp"
                    android:background="@drawable/stroke"
                    android:drawableStart="@drawable/ic_question_answer_black_24dp"
                    android:drawableLeft="@drawable/ic_question_answer_black_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="8dp"/>
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>